Closed Bug 296339 Opened 21 years ago Closed 21 years ago

No response when I am inputting use the MSPinYin(Chinese) input method

Categories

(Core :: Internationalization, defect, P1)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla1.8beta3

People

(Reporter: fengxs, Assigned: masayuki)

Details

(Keywords: intl)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.8) Gecko/20050511 Firefox/1.0.4 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.8) Gecko/20050511 Firefox/1.0.4 When I am compose a mail(in ThunderBird) or submit some messages(in FireFox), I use the MSPinYin 2003 input method(http://download.microsoft.com/download/b/6/5/b6554006-de1b-4160-9aee-62accd789373/MSPY.msi), but sometimes the cursor can not move use the keyboard. I must change the InputMethod to English, then turn back to MSPinYin 2003 again, everything will be fine, but after inputted some words, the bug will come back. The bug not only in MSPinYin 2003, but MSPinYin 3.0 and another MSPinYin InputMethod versions. Reproducible: Couldn't Reproduce Steps to Reproduce: 1.Open ThunderBird to compose a mail 2.Change to MSPinYin input method 3.Input some Chinese words, move the cursor use the keyboard 4.If the cursor can be moved, do Step 3 again Actual Results: Can not Move the Cursor use the KeyBoard. Expected Results: Can move the Cursor use the KeyBoard every time. The bug not only in MSPinYin 2003, but MSPinYin 3.0 and another MSPinYin InputMethod versions.
Assignee: composer → smontagu
Component: Composer → Internationalization
Product: Mozilla Application Suite → Core
QA Contact: amyy
Version: unspecified → 1.7 Branch
Thank you so very much. I have test the trunk build(Deer Park Alpha 1), the bug is still exist... but I found a easy method to reproduce it: 1.Open ThunderBird to compose a mail 2.Change to MSPinYin input method 3.Just input a Chinese full stop("。") word, move the cursor use the keyboard, you will can not move it. (In reply to comment #1) > please try a trunk build: > http://ftp.mozilla.org/pub/mozilla.org/firefox/releases/deerpark/alpha1/ > > ==> intl
Version: 1.7 Branch → Trunk
Masayuki, can you take a look?
I cannot reproduce with MSPinYin 2.0 on Win2k.
Sorry for this my mistake... The bug is exist in: 1. MSPinYin 2003 2. Windows 2000 Professional 3. Windows XP Professional Please download MSPinYin 2003 from this link:http://download.microsoft.com/download/b/6/5/b6554006-de1b-4160-9aee-62accd789373/MSPY.msi thank for your in time and excellent reply. bagggio. (In reply to comment #4) > I cannot reproduce with MSPinYin 2.0 on Win2k.
O.K. I can reproduce it.
Assignee: smontagu → masayuki
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: intl
Priority: -- → P1
Target Milestone: --- → mozilla1.8beta3
Attached patch Patch rv1.0 (obsolete) — Splinter Review
It fixes this bug. And the bottom of this patch's fixes the debug code's another bug. That blocks Hangul IME test for this patch.
Attachment #185849 - Flags: review?(timeless)
Status: NEW → ASSIGNED
Flags: blocking1.8b3?
Comment on attachment 185849 [details] [diff] [review] Patch rv1.0 >Index: widget/src/windows/nsWindow.cpp >@@ -6619,16 +6623,34 @@ BOOL nsWindow::OnIMEComposition(LPARAM a >+ if (sIMECompUnicode->Length() == 0 && use sIMECompUnicode->IsEmpty() >+ // string is null(it indicates the composition transaction ended), ^^^ space please
Attachment #185849 - Flags: superreview?(rbs)
Attachment #185849 - Flags: review?(timeless)
Attachment #185849 - Flags: review+
Comment on attachment 185849 [details] [diff] [review] Patch rv1.0 sr=rbs nitpicking: + if (sIMECompUnicode->Length() == 0 && + !startCompositionMessageHasBeenSent) { to + if (sIMECompUnicode->IsEmpty() && + !startCompositionMessageHasBeenSent)
Attachment #185849 - Flags: superreview?(rbs) → superreview+
Attached patch Patch rv1.1Splinter Review
Thank you, timeless and rbs!
Attachment #185849 - Attachment is obsolete: true
Attachment #187048 - Flags: superreview+
Attachment #187048 - Flags: review+
Attachment #187048 - Flags: approval1.8b3?
Attachment #187048 - Flags: approval1.8b3? → approval1.8b3+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.8b3?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: