Bug 296339 No response when I am inputting use the MSPinYin(Chinese) input method r=timeless, sr=rbs, a=asa